<resources>
    <string name="app_name" translatable="false">ListenBook</string>
    <string name="language">Русский</string>
    <string name="now_playing">СЕЙЧАС ИГРАЕТ</string>
    <string name="duration_ru">Длительность: </string>
    <string name="readed">      Прочитано: </string>

    <string name="sidebar_player">Плеер</string>
    <string name="sidebar_books">Книги</string>
    <string name="sidebar_bookmarks">Закладки</string>
    <string name="sidebar_history">История</string>
    <string name="sidebar_statistics">Статистика</string>
    <string name="sidebar_settings">Настройки</string>
    <string name="sidebar_help">Помощь</string>
    <string name="sidebar_aps">Приложения --</string>
    <string name="sidebar_about_program">О программе</string>

    <string name="toolbar_library">Библиотека</string>
    <string name="toolbar_find_books">Поиск книг</string>
    <string name="toolbar_bookmark">Закладки</string>

    <string name="activity_bookmarks_info">Все ваши закладки будут видны здесь.</string>
    <string name="activity_history">История ваших действий будет видна здесь.</string>
    <string name="activity_statistics_all_time">За все время</string>
    <string name="activity_statistics_green">Период</string>
    <string name="activity_statistics_red">Общее время прослушивания</string>
    <string name="activity_statistics_purple">Дольше всего слушали за день</string>
    <string name="activity_statistics_orange">В среднем в день</string>
    <string name="activity_statistics_overhead">Прослушано</string>
    <string name="activity_statistics_session">Сессия</string>
    <string name="activity_settings_interface">Интерфейс</string>
    <string name="activity_settings_interface_1">Продолжить чтение на старте</string>
    <string name="activity_settings_interface_2">Разрешить переворот экрана</string>
    <string name="activity_settings_interface_3">Разрешить альбомную ориентацию</string>
    <string name="activity_settings_interface_4">Нижний колонтитул таблицы</string>
    <string name="activity_settings_interface_5">Цветовая тема</string>
    <string name="activity_settings_interface_6">Язык интерфейса</string>
    <string name="activity_settings_player_1">Авто-пауза на нулевой громкости</string>
    <string name="activity_settings_player_2">Для пульта наушников и Bluetooth</string>
    <string name="activity_settings_player_3">Авто перемотка назад</string>
    <string name="activity_settings_player_4">Аудио движок</string>
    <string name="activity_settings_player_5">Скорость перемотки</string>
    <string name="activity_settings_player_6">Смешивание с навигацией</string>
    <string name="activity_settings_player_7">Предпочтительная кодировка тегов</string>
    <string name="cancel">Отмена</string>
    <string name="light_theme">Светлая</string>
    <string name="dark_theme">Темная</string>
    <string name="auto_theme">Система</string>
    <string name="permission_dialog_title">Необходимо разрешение</string>
    <string name="permission_dialog_text">Для использования данной функции требуется разрешение на доступ к памяти телефона.
                                            Вы можете предоставить разрешение в настройках приложения.</string>
    <string name="save">Сохранить</string>
    <string name="dialog_bookmark_title">Новая закладка</string>
    <string name="chapter">Глава</string>
    <string name="toolbar_book_settings">Обработка</string>
    <string name="delete">Удалить</string>
    <string name="edit">Изменить</string>
    <string name="goToBookmark">Перейти на закладку</string>
    <string name="deleteBookmarks">Удалить закладки</string>
    <string name="rewindSpeed">Cкорость перемотки</string>
    <string name="learningLibrary">Нажмите эту кнопку для того, чтобы добавить новую книгу</string>
    <string name="learningMainBooks">Нажмите эту кнопку для добавления, удаления или выбора книг</string>
    <string name="learningMainBurger">Нажмите эту кнопку для открытия бокового меню</string>
    <string name="titleFirstslideFirst">Слушайте книги!</string>
    <string name="titleSecondslideFirst">Любые и где угодно!</string>
    <string name="titleFirstslideSecond">Простое добавление</string>
    <string name="titleSecondslideSecond">аудиокниг</string>
    <string name="titleFirstslideThird">Не тратьте время на</string>
    <string name="titleSecondslideThird">конвертацию аудиокниг</string>
    <string name="titleFirstslideForth">Отдыхайте, учитесь и</string>
    <string name="titleSecondslideForth">развивайтесь с аудиокнигами</string>
    <string name="contentSlide1">Слушайте аудиокниги скаченные из Интернета без ограничений. В любых аудиоформатах и независимо от наличия Интернета!</string>
    <string name="contentSlide2">Загружайте аудиокниги с компьютера через браузер, WebDav, из облачных сервисов и напрямую из приложения YouTube!</string>
    <string name="contentSlide3">Слушайте аудиокниги в любом из множеств поддерживаемых форматов аудиокниг: MP3, M4B, M4A, AWB, AAC, WMA, FLAC, OPUS, OGG. Также можно загружать аудиокниги в виде ZIP-архива.</string>
    <string name="contentSlide4">Умный таймер сна поможет тебе расслабиться. Закладки запомнят любимые места. Статистика посчитает сколько времени вы уделяете книгам</string>
</resources>