<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_drawer"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/drawer_menu"
    android:paddingTop="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ScrollViewCount">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LISTEN BOOK"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="F        R        E        E"
        android:textSize="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/white"
        android:background="@android:color/black"
        android:textAlignment="center"/>

    <LinearLayout
        android:id="@+id/sidebar_player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/sidemenu_player"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidebar_player"
            android:textSize="25dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sidebar_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_books"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidebar_books"
            android:textSize="25dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sidebar_bookmarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/sidemenu_bookmarks"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidebar_bookmarks"
            android:textSize="25dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sidebar_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/sidemenu_history"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidebar_history"
            android:textSize="25dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sidebar_statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/sidemenu_statistics"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidebar_statistics"
            android:textSize="25dp"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sidebar_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/sidemenu_settings"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidebar_settings"
            android:textSize="25dp"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/sidemenu_help"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidebar_help"
            android:textSize="25dp"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/sidemenu_help"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidebar_aps"
            android:textSize="25dp"
            android:textColor="@color/white" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="5dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/sidemenu_about"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sidebar_about_program"
            android:textSize="25dp"
            android:textColor="@color/white" />
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>