<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:maxWidth="400dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/radius_background_control_buttons"
    tools:ignore="MissingDefaultResource">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_bookmark_title"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/textColor"
        android:textAlignment="center"
        tools:ignore="MissingConstraints">
    </TextView>
    <TextView
        android:id="@+id/dialog_add_bookmark_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Teen speerit nirvana"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:padding="10dp"
        android:textSize="20sp"
        android:textAlignment="center"
        tools:ignore="MissingConstraints">
    </TextView>
    <EditText
        android:id="@+id/dialog_add_bookmark_editText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textColorLink="@color/white"
        android:hint="@string/chapter"
        android:inputType="textPersonName"
        android:autofillHints="" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingRight="10sp"
        android:paddingLeft="10sp">
        <Button
            android:id="@+id/dialog_add_bookmark_minus_30sec"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:background="@drawable/radius_check_buttons"
            android:elevation="32dp"
            android:layout_margin="15dp"
            android:textColor="@color/textColor"
            android:text="- 30 s."
            android:textAllCaps="false"
            android:textSize="18sp"
            tools:ignore="HardcodedText">
        </Button>
        <TextView
            android:id="@+id/dialog_add_bookmark"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:text="10:26"
            android:textSize="18sp"
            android:textAlignment="center"
            tools:ignore="MissingConstraints">
        </TextView>
        <Button
            android:id="@+id/dialog_add_bookmark_plus_30sec"
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:background="@drawable/radius_check_buttons"
            android:elevation="32dp"
            android:layout_margin="15dp"
            android:textColor="@color/textColor"

            android:text="+ 30 s."
            android:textAllCaps="false"
            android:textSize="18sp"
            tools:ignore="HardcodedText">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/dialog_add_bookmark_cancel"
            android:layout_width="0dp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:elevation="32dp"
            android:layout_margin="15dp"
            android:textColor="@color/textColor"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="20sp"
            tools:ignore="HardcodedText">
        </Button>
        <Button
            android:id="@+id/dialog_add_bookmark_save"
            android:layout_width="0dp"
            android:layout_height="35sp"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:elevation="32dp"
            android:layout_margin="15dp"
            android:textColor="@color/textColor"

            android:text="@string/save"
            android:textAllCaps="false"
            android:textSize="20sp"
            tools:ignore="HardcodedText">
        </Button>
    </LinearLayout>
</LinearLayout>